# compressed_gui

./: .gitignore  CMakeLists.txt  README.md  mingw-toolchain.cmake  plot_psnr.ipynb
docs/: report.md
src/: gui.h  heic.h  helpers.h  jpg.h  logger.h  main.cpp  stb_image_impl.cpp
